static/flow.css
* {
    padding: 0;
    margin: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html {
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    background-color: #FFF9F5;
}

body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-family: proxima-nova, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 300;
    color: #444;
    margin: 0;
    line-height: 1.6em;
    padding-top: 50px;
    padding-bottom: 10px;
}

h1, h2, h3, h4 {
    font-weight: normal;
    margin: 1.3em 0 0.2em;
    line-height: 1.4em;
}

h1:first-child, h2:first-child, h3:first-child, h4:first-child {
    margin-top: 0;
}

h1 {
    font-size: 2em;
    font-weight: bold;
}

h2 {
    font-size: 1.5em;
}

h3 {
    font-size: 1.3em;
}

h4 {
    font-size: 1.1em;
}

p, ul {
    margin:  0 0 1em 0;
}

.wrap {
    width: 960px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 20px;
    padding-right: 20px
}

.subhero .wrap {
    width: auto;
    max-width: 960px;
}

.home-section {
    width: 500px;
    margin-left: auto;
    margin-right: auto;
}

code {
    letter-spacing: 0.02em;
    padding-right: 2px;
    padding-left: 4px;
    border-radius: 3px;
}

.highlight pre {
    white-space: pre-wrap;
    font-family: 'source-code-pro', Menlo, 'Courier New', Consolas, monospace;
    font-size: 13px;
    line-height: 20px;
}

.highlight pre code {
    display: block;
    padding: 0;
    border-left: 4px solid rgb(214, 139, 0);
    padding: 5px 10px;
    margin-left: 20px;
    margin-bottom: 1em;
    border-radius: 0;
    background-color: rgba(226, 141, 49, 0.1);
}

.lineno {
  color: rgb(214, 139, 0);
}

.highlight pre code.language-bash {
    border-left: 4px solid hsl(19, 0%, 42%);
    background-color: hsla(8, 0%, 54%, 0.1);
}

.highlight pre code.language-bbcode {
    border-left: 4px solid hsl(19, 100%, 42%);
    background-color: hsla(8, 75%, 54%, 0.1);
}

.highlight + .highlight + .highlight {
    margin-top: -13px;
}


ul {
 list-style-position: outside;
 margin-left: 1em;
 padding-left: 1em;
}


a {
    text-decoration: none;
    color: #C7590F;
}

nav.toc a {
    color: #444;
}
nav.toc a.active {
    color: #C7590F;
}

a.hash-link {
    color: #ccc;
}

a.hash-link:hover {
    color: #bb2910;
}

.width {
    margin: 0 auto;
    padding: 0 20px;
}

header:after, section.content:after, footer:after {
    clear: both;
    content: ".";
    display: block;
    font-size: 0;
    height: 0;
    line-height: 0;
    visibility: hidden;
}

header.topbar {
    background: #3B3738;
    color: #FAFAFA;
    position: fixed;
    top: 0;
    height: 50px;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
    width: 100%;
    z-index: 100;
}

header.topbar .logo {
    height: 30px;
    margin-top: 7px;
}

.flow-header {
    background-image: url(logo_full_transparent.png);
    background-size: contain;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    height: 150px;
    margin-bottom: 15px;
}

header.topbar nav ul {
    float: right;
    text-align: right;
    padding: 0;
    margin: 0;
    font-size: 0;
}

header.topbar nav ul li {
    display: inline;
    text-transform: uppercase;
}

header.topbar nav ul li a {
    padding: 0 8px;
    text-transform: uppercase;
    letter-spacing: 1px;
    line-height: 50px;
    display: inline-block;
    height: 50px;
    color: #AAA;
    font-size: 15px;
}

header.topbar nav ul li a.active {
    color: #FAFAFA;
    border-bottom: 3px solid #D68B00;
    background: #333;
}

header.hero {
    background: #FFEAD1;
    padding: 20px 0;
}

header.hero .width {
    text-align: center;
}

header.hero h1 {
    font-size: 4em;
    font-weight: normal;
    color: #bb2910;
    margin: 0;
    line-height: 1.5em;
}

header.hero p {
    margin: 0 0 .5em;
    text-transform: uppercase;
}

header.hero a.button {
    background: rgb(214, 139, 0);
    color: #ffffff;
    font-weight: bold;
    text-transform: uppercase;
    padding: 10px 20px;
    display: inline-block;
    margin: 1em;
    box-shadow: 0px 1px 2px rgba(0,0,0,0.3);
}

header.subhero {
    padding: 10px 0;
    padding-top: 30px;
}

section.content {
    padding: 20px 0;
}

section.content article ul li {
  margin-bottom: 1em;
}


section.content article img {
    display: block;
    margin: 1em auto;
}

section.content article blockquote {
    padding: 0px 20px;
    margin: 0 0 20px;
    border-left: 5px solid #eee;
}

section.content article blockquote p {
    font-style: italic;
}

section.content article blockquote small:before {
    content: '\2014 \00A0';
}

section.content article.withtoc {
    position: relative;
}

section.content aside .fb-like {
    top: 4px;
    left: 4px;
}

.edit-page-link {
    float: right;
    font-size: 12px;
    font-weight: normal;
    line-height: 20px;
    opacity: 0.6;
    transition: opacity 0.5s;
}

.edit-page-link:hover {
  opacity: 1;
}

nav.toc {
    font-size: 14px;
    line-height: 18px;
    margin-bottom: 20px;
}

nav.toc h3 {
    margin: 0.5em 0;
    padding-top: 0.5em;
    font-size: 14px;
    font-weight: bold;
    text-transform: uppercase;
    line-height: 40px;
}

nav.toc section:first-child h3 {
    border-top: none;
    margin-top: 0;
    padding-top: 0;
}

nav.toc ul {
   list-style: none;
   margin: 0;
   padding-left: 0;
}

nav.toc ul li {
    line-height: 20px;
}

footer {
    padding: 5px 0;
    font-size: 13px;
    text-align: right;
}

.right {
    float: right;
}

.right a {
    color: #cd4e34;
    padding: 0 5px;
}

.playgroundCode, .playgroundPreview {
    border-left: 4px solid #D68B00;
    margin-left: 20px;
    background-color: rgba(226, 141, 50, 0.1);;
}

.playgroundError {
    padding: 10px;
}

.playgroundPreview {
    margin-top: 10px;
    margin-bottom: 200px;
}

.playground > :first-child {
    display: none;
}

.cm-keyword, .cm-atom {
    font-weight: bold;
}

.cm-number {
    color: #099;
}

.cm-string {
    color: #D01040;
}

.cm-comment {
    color: #998;
    font-style: italic;
}

.CodeMirror-code {
    line-height: 20px;
}
.CodeMirror-cursor {
    margin-top: 4px;
}
div.CodeMirror-lines {
    padding: 5px 0;
}


#\_ {
    display: none;
}

/* desktopish */

@media (min-width: 481px) {

    .width {
        max-width: 960px;
        /* make columns add to <880 for 60 gutter */
    }
    .content .width {
        width: 960px;
    }

    .panel3 {
        width: 29%;
        margin: 1em 2% 0;
        display:inline-block;
        vertical-align: top;
        font-size: 14px;
    }

    section.content article {
        margin: 0 auto;
        width: 660px;
    }

    section.content nav.toc {
        float: left;
    }


    section.content article.withtoc {
        float: right;
    }

    section.content aside {
        float: left;
        width: 220px;
    }

}

/* phoneish */

@media (max-width: 480px) {
    .wrap, .content .width, .home-section, section.content article {
        width: auto;
    }

    header.topbar .width {
        padding: 0 5px;
    }

    .left, .right {
        font-size: 20px;
    }

    .highlight pre code {
        font-size: 10px;
        line-height: 13px;
    }

    .highlight pre code {
        margin-left: 0;
    }

    #\_ {
        display: block;
        position: absolute;
        top: -60px;
        left: 0;
    }

}

